<resources>
    <string name="app_name">Elokwentna</string>
    <string name="timer_text">Time to next update:</string>
    <string name="timer_done">Done</string>
    <string name="button_sync">Sync Data</string>
    <string name="button_help">Help</string>
    <string name="download_words">You must update the database! Select Sync Data from top menu.</string>
    <string name="download_message">Downloading words…</string>
    <string name="no_more_results">No words. Try to update your database. Select Sync Data from top menu.</string>
    <string name="word_default">No words!</string>
    <string name="title_words">Words</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_library">Library</string>
    <string name="title_settings">Settings</string>
    <!-- Toasts -->
    <string name="t_afterDownload">Database was updated</string>
    <string name="t_refusalUpdate">You cannot draw more words yet</string>
    <string name="t_isUpdated">The database is up to date</string>
    <string name="t_timedOut">Connection timed out</string>
    <string name="t_refused">Connection refused</string>
    <string name="t_defaultError">Unknown error occurred</string>
    <!-- Dialogs -->
    <string name="dialog_add_favorite">Do you want add this word to your favourites?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="description_default">Update the database using an option Sync Data from upper menu.</string>
    <string name="settings_widget_color">Change color of widget</string>
    <string name="settings_button_choose">Choose</string>
    <string name="debug_test">Lorem ipsum dolor sit amet ante. Pellentesque nibh ac nisl. Nam eget sapien a nunc. Praesent sit amet, est. Suspendisse turpis egestas. Praesent nec magna fringilla massa placerat porttitor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per conubia nostra, per conubia nostra, per conubia nostra, per inceptos hymenaeos. Fusce venenatis in, elementum nulla. Cras in nulla nec.</string>
    <string name="settings_drop_database">Drop the database</string>
    <string name="settings_button_clear">Earse</string>
    <string name="settings_drop_database_info">Użycie tej funkcji spowoduje permamentne wyczyszcenie Twojej lokalnej bazy słów, a następnie pobrane danych z serwera. Nowe dane zostaną zapisane w Twojej lokanej bazie.</string>
    <string name="settings_widget_color_info">Zmień kolor swojego widgetu na ekranie głównym.</string>
    <string name="settings_about_me">About me</string>
    <string name="application_version">Application version:</string>
    <string name="author_name">Arkadiusz Pałka</string>
    <string name="author">Author:</string>
    <string name="red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="question_drop_database">Earse the database?</string>
    <string name="desc_drop_database">You\'ll lost your library, favorites and local storage of words!</string>
</resources>
