<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/bottombaritem_words"
    android:icon="@drawable/ic_view_headline_black_24dp"
    android:title="@string/title_words"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottombaritem_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottombaritem_library"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"/>

    <item
    android:id="@+id/bottombaritem_settings"
    android:icon="@drawable/ic_settings_black_24dp"
    android:title="@string/title_settings"
    app:showAsAction="ifRoom"/>

</menu>